fixed research spacing

--- a/flask_app/static/css/design.css
+++ b/flask_app/static/css/design.css
@@ -167,7 +167,7 @@ footer {
 
 
 
-@media (max-width: 1150px) { 
+@media (max-width: 1350px) { 
     .image-clip{
         width:100%;
         height: auto;
